Test if images display correctly on iOS devices

--- a/src/style.css
+++ b/src/style.css
@@ -147,6 +147,7 @@ nav .sidenav-trigger i {
     background-image: url('./img/logo_text.png');
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
     width: 150px;
     height: 200px;
     margin: 0 auto;
@@ -508,3 +509,9 @@ nav .sidenav-trigger i {
         margin: 4rem 0;
     }
 }
+
+@media (hover: none) {
+    .section__block.img {
+        background-attachment: initial;
+    }
+} 
